# agenticnexus

./: .env.example  CLAUDE.md  README.md  custom_client.py  custom_client_see_bug_agent.md  main.py  mcp_router_rant.md  pyproject.toml  requirements-dev.txt  requirements.txt  router.py  test.py  test_client.py  test_progress.py  test_tool.py
.claude/: settings.local.json
Notes/: Learn.md
docs/: mcp_docs_1.md  mcp_notes_part_1.md
src/agenticnexus/: main.py  mcp_server.py
src/agenticnexus/mcp/: models.py  server.py  utils.py
src/agenticnexus/tools/: __init__.py  base.py  schemas.py
src/agenticnexus/tools/core/search/: tool.py
src/agenticnexus/tools/search/: __init__.py  schemas.py  utils.py
src/agenticnexus/tools/writing_style/: __init__.py
src/scripts/: test_tool.py  test_tool_output.txt
