[project]
name = "agenticnexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# Core runtime dependencies - using minimum versions we know work
# Pinned versions for 100% reproducibility
dependencies = [
    "fastapi==0.121.3",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I"]
ignore = []
exclude = [".venv", "__pycache__", "*.egg-info"]
